--- a/package.json
+++ b/package.json
@@ -82,12 +82,13 @@
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.4",
-    "@tanstack/react-table": "^8.21.3",
-    "@tanstack/react-virtual": "^3.13.6",
-    "@vitejs/plugin-react": "^4.4.1",
     "@tanstack/react-query": "^5.74.7",
     "@tanstack/react-router": "^1.117.1",
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.6",
     "@tanstack/router-devtools": "^1.117.1",
+    "@vitejs/plugin-react": "^4.4.1",
+    "axios": "^1.9.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
