Modify the request return parameters

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "UDB",
   "productName": "UDB",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "UDB, an open-source, multi-agent based modern database management tool.",
   "main": ".vite/build/main.js",
   "private": true,
@@ -103,7 +103,8 @@
     "monaco-editor": "^0.52.2",
     "next-themes": "^0.4.6",
     "openai": "^4.96.2",
-    "react": "^19.1.0",
+    "package": "^1.0.1",
+    "react": "^19.1.0" ,
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
     "react-i18next": "^15.5.1",
