Enhanced AI-assisted capabilities for creating or modifying table structures.

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.6",
@@ -103,6 +104,7 @@
     "marked": "^15.0.11",
     "monaco-editor": "^0.52.2",
     "next-themes": "^0.4.6",
+    "node-sql-parser": "^5.3.9",
     "openai": "^4.96.2",
     "package": "^1.0.1",
     "react": "^19.1.0",
