Optimized the modification of query results.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/d3": "^7.4.3",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/jsonstream": "^0.8.33",
+    "@types/lodash": "^4.17.18",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -94,14 +96,18 @@
     "adm-zip": "^0.5.16",
     "axios": "^1.9.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
+    "chardet": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "crypto": "^1.0.1",
     "d3": "^7.9.0",
     "electron-squirrel-startup": "^1.0.1",
+    "exceljs": "^4.4.0",
     "i18next": "^25.0.1",
     "isbinaryfile": "^5.0.4",
+    "jsonstream": "^1.0.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "marked": "^15.0.11",
     "monaco-editor": "^0.52.2",
